--- a/task1/second.html
+++ b/task1/second.html
@@ -8,12 +8,12 @@
     <a href="https://www.w3schools.com">Visit W3Schools</a>
     <img src="image.jpg">
     <img src="img_girl.jpg" width="500" height="600">
-    <p style="color:red;">This is a red paragraph.</p>
-    <h1 style="background-color:powderblue;">This is a heading</h1>
-    <p style="background-color:tomato;">This is a paragraph.</p>
-    <h1 style="font-family:verdana;">This is a heading</h1>
-    <p style="font-family:courier;">This is a paragraph.</p>
-    <h1 style="font-size:300%;">This is a heading</h1>
-    <p style="font-size:160%;">This is a paragraph.</p>
+    <p style="color:red;">This is a red paragraph with color red</p>
+    <h1 style="background-color:powderblue;">This is a heading with background color blue</h1>
+    <p style="background-color:tomato;">This is a paragraph with background color red</p>
+    <h1 style="font-family:verdana;">This is a heading with style font verdana</h1>
+    <p style="font-family:courier;">This is a paragraph with syle font courier</p>
+    <h1 style="font-size:300%;">This is a heading with size 300%</h1>
+    <p style="font-size:160%;">This is a paragraph with size 160 %</p>
 </body>
 </html>
